MODDCB-208: bump spring-boot to 3.5 and update dependencies (#168)